; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_ff_biweight_h264_pixels8_8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_ff_biweight_h264_pixels8_8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_biweight_h264_pixels8_8_msa(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %17 = load i32, i32* %12, align 4
  %18 = icmp eq i32 4, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %8
  %20 = load i32*, i32** %10, align 8
  %21 = load i32*, i32** %9, align 8
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %13, align 4
  %24 = load i32, i32* %15, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %16, align 4
  %27 = call i32 @avc_biwgt_8x4_msa(i32* %20, i32* %21, i32 %22, i32 %23, i32 %24, i32 %25, i32 %26)
  br label %50

28:                                               ; preds = %8
  %29 = load i32, i32* %12, align 4
  %30 = icmp eq i32 8, %29
  br i1 %30, label %31, label %40

31:                                               ; preds = %28
  %32 = load i32*, i32** %10, align 8
  %33 = load i32*, i32** %9, align 8
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* %13, align 4
  %36 = load i32, i32* %15, align 4
  %37 = load i32, i32* %14, align 4
  %38 = load i32, i32* %16, align 4
  %39 = call i32 @avc_biwgt_8x8_msa(i32* %32, i32* %33, i32 %34, i32 %35, i32 %36, i32 %37, i32 %38)
  br label %49

40:                                               ; preds = %28
  %41 = load i32*, i32** %10, align 8
  %42 = load i32*, i32** %9, align 8
  %43 = load i32, i32* %11, align 4
  %44 = load i32, i32* %13, align 4
  %45 = load i32, i32* %15, align 4
  %46 = load i32, i32* %14, align 4
  %47 = load i32, i32* %16, align 4
  %48 = call i32 @avc_biwgt_8x16_msa(i32* %41, i32* %42, i32 %43, i32 %44, i32 %45, i32 %46, i32 %47)
  br label %49

49:                                               ; preds = %40, %31
  br label %50

50:                                               ; preds = %49, %19
  ret void
}

declare dso_local i32 @avc_biwgt_8x4_msa(i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @avc_biwgt_8x8_msa(i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @avc_biwgt_8x16_msa(i32*, i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
